syntax = "proto3";
package com.xabe.car;

option java_package = "com.xabe.car.api.grpc.searchcar";

message SearchCarRequest {

  string brand = 1;

}